--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "chalk": "^5.4.1",
         "commander": "^14.0.3",
+        "dotenv": "^17.3.1",
         "fs-extra": "^11.3.0",
         "inquirer": "^13.2.5",
         "ora": "^8.2.0"
