--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "dotenv": "^17.3.1",
         "fs-extra": "^11.3.0",
         "inquirer": "^13.2.5",
-        "ora": "^8.2.0"
+        "ora": "^8.2.0",
+        "smol-toml": "^1.6.0"
     },
     "engines": {
         "node": ">=20"
