--- a/templates/apps/docs/src/styles/custom.css.template
+++ b/templates/apps/docs/src/styles/custom.css.template
@@ -1,7 +1,7 @@
 /* Custom styles for {{projectCapitalized}} docs */
 :root {
     --sl-color-accent-low: #1a1145;
-    --sl-color-accent: #8B5CF6;
+    --sl-color-accent: {{accentColor}};
     --sl-color-accent-high: #c4b5fd;
     --sl-color-white: #ffffff;
     --sl-color-gray-1: #eceef2;
