chore: rename package to create-minions-toolbox and enable auto npm publishing

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "create-minions-app",
+    "name": "create-minions-toolbox",
     "version": "1.0.0",
     "description": "Scaffold new Minions ecosystem projects with established patterns",
     "type": "module",
     "license": "MIT",
     "author": "Mehdi Nabhani <mehdi@the-mehdi.com> (https://the-mehdi.com)",
     "bin": {
-        "create-minions-app": "./src/index.js"
+        "create-minions-toolbox": "./src/index.js"
     },
     "main": "./src/index.js",
     "files": [
@@ -23,7 +23,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/mxn2020/create-minions-app"
+        "url": "https://github.com/mxn2020/create-minions-toolbox"
     },
     "dependencies": {
         "chalk": "^5.4.1",
