feat: fix scoped app naming and add SKILLS.md template (v1.1.0)
- Fix app package names to use scoped @projectName/docs|blog|web
- Add docsName, blogName, webName template variables
- Fix root package.json and ci.yml build scripts to use scoped names
- Add SKILLS.md template with CRUD skills, CLI usage, and SDK examples
- Bump version to 1.1.0

--- a/templates/apps/docs/package.json
+++ b/templates/apps/docs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "{{projectName}}-docs",
+    "name": "{{docsName}}",
     "version": "0.1.0",
     "private": true,
     "type": "module",
