--- a/templates/apps/blog/package.json
+++ b/templates/apps/blog/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "{{projectName}}-blog",
+    "name": "{{blogName}}",
     "version": "0.1.0",
     "private": true,
     "type": "module",
