--- a/templates/root/package.json
+++ b/templates/root/package.json
@@ -11,10 +11,10 @@
         "apps/*"
     ],
     "scripts": {
-        "build": "pnpm --filter {{sdkName}} run build && pnpm --filter {{cliName}} run build && pnpm --filter {{projectName}}-docs run build && pnpm --filter {{projectName}}-blog run build && pnpm --filter {{projectName}}-web run build",
-        "deploy:blog": "pnpm --filter {{projectName}}-blog run build && netlify deploy --dir apps/blog/dist --prod",
-        "deploy:docs": "pnpm --filter {{projectName}}-docs run build && netlify deploy --dir apps/docs/dist --prod",
-        "deploy:web": "pnpm --filter {{projectName}}-web run build && netlify deploy --dir apps/web/dist --prod",
+        "build": "pnpm --filter {{sdkName}} run build && pnpm --filter {{cliName}} run build && pnpm --filter {{docsName}} run build && pnpm --filter {{blogName}} run build && pnpm --filter {{webName}} run build",
+        "deploy:blog": "pnpm --filter {{blogName}} run build && netlify deploy --dir apps/blog/dist --prod",
+        "deploy:docs": "pnpm --filter {{docsName}} run build && netlify deploy --dir apps/docs/dist --prod",
+        "deploy:web": "pnpm --filter {{webName}} run build && netlify deploy --dir apps/web/dist --prod",
         "test": "pnpm --filter {{sdkName}} run test",
         "lint": "pnpm --filter {{sdkName}} run build && pnpm --filter {{sdkName}} run lint && pnpm --filter {{cliName}} run lint",
         "deploy": "pnpm run deploy:blog"
