--- a/templates/packages/cli/package.json
+++ b/templates/packages/cli/package.json
@@ -8,7 +8,10 @@
     "url": "https://github.com/{{githubRepo}}"
   },
   "homepage": "https://{{domainHelp}}",
-  "keywords": {{keywordsJson}},
+  "keywords": {
+    {keywordsJson
+    }
+  },
   "author": "{{authorName}} <{{authorEmail}}> ({{authorUrl}})",
   "type": "module",
   "bin": {
@@ -29,7 +32,7 @@
     "chalk": "^5.6.2",
     "commander": "^14.0.3",
     "inquirer": "^13.2.5",
-    "minions-sdk": "^0.2.2"
+    "minions-sdk": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
